--- a/assets/style.css
+++ b/assets/style.css
@@ -1,35 +1,34 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 0; margin-right:0; margin-bottom:0;
-}
-
-body {font-size: 16px;
-    text-align:center;
-    color:black;
-    background-color: rgb(170, 240, 205);
+    margin-left: 0; margin-right:0;
 }
 
 h1{font-size: 28px;}
 h2{font-size: 24px;}
 h3{font-size: 20px;}
 
+body {font-size: 16px;
+    text-align:center;
+    color:black;
+    background-color: rgb(170, 240, 205);}
+
 header, footer, nav {background-color: rgb(13, 95, 84);
 color: rgb(208, 136, 230);}
 
-header {position:fixed; top:0; left:0; right:0;
-        padding-bottom: 5px;
-        border-bottom: 8px solid rgb(160, 65, 189);
-}
+header{position:fixed; top:0; left:0; right:0;
+        border-bottom: 8px solid rgb(160, 65, 189);}
 
 nav{text-align: right;
-    font-size: 24px;
-}
+    font-size: 24px;}
 
-header nav ul li {display: inline;
-}
+header nav ul li {display: inline;}
 
-a{color:rgb(208, 136, 230); font-weight: bolder; margin-right:20px;}
+a{color:rgb(208, 136, 230); font-weight: bolder; margin-right:10px;}
 
-h1{margin-top: 80px;}
+h1{margin-top:100px;}
 
 figure {margin-top: 40px;}
+
+form {background-color: rgb(30, 30, 95); font-weight: bold; color:white; padding:5px;}
+
+footer {padding:5px;}
