--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 0; margin-right:0;
 }
 
 h1{font-size: 28px;}
@@ -10,7 +9,8 @@ h3{font-size: 20px;}
 body {font-size: 16px;
     text-align:center;
     color:black;
-    background-color: rgb(170, 240, 205);}
+    background-color: rgb(170, 240, 205);
+    margin: 0;}
 
 header, footer, nav {background-color: rgb(13, 95, 84);
 color: rgb(208, 136, 230);}
@@ -21,14 +21,22 @@ header{position:fixed; top:0; left:0; right:0;
 nav{text-align: right;
     font-size: 24px;}
 
-header nav ul li {display: inline;}
+header nav ul {margin-top: 8px; margin-bottom: 8px}
+
+header nav ul li {display: inline; padding: 0 8px;}
 
 a{color:rgb(208, 136, 230); font-weight: bolder; margin-right:10px;}
 
 h1{margin-top:100px;}
 
+h2{margin: 36px auto 8px;}
+
 figure {margin-top: 20px;}
 
-form {background-color: rgb(30, 30, 95); font-weight: bold; color:white; padding:5px;}
+form {background-color: rgb(30, 30, 95); font-weight: bold; color:white; padding:8px;}
 
-footer {padding:5px;}
+.text-input {margin:8px auto;}
+
+.submit-button {font-weight: bold;}
+
+footer {padding:20px; margin:0 auto;}
